--- a/reweighting/MELA_Tutorial.ipynb
+++ b/reweighting/MELA_Tutorial.ipynb
@@ -20,17 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b80e8b",
-   "metadata": {},
-   "source": [
-    "<!-- ![image-2.png](attachment:image-2.png) -->\n",
-    "<sup> Left --> Right </sup>\n",
-    "\n",
-    "<sup> Ian Anderson , Ulascan Sarica, Andrei Gritsan (Top) Chris Martin, Roberto Covarelli (Bottom) </sup>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fcd6e496",
    "metadata": {},
    "source": [
@@ -1020,7 +1009,11 @@
     "## DOING THINGS THIS WAY IS A HUGE PAIN!\n",
     "\n",
     "This is why, just for you, the MELA team devised a series of names for each and every coupling that can be used very easily. You saw this used just above. It is shown how to do that below:\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "<!-- ![image-2.png](attachment:image-2.png) -->\n",
+    "<sup> Left --> Right </sup>\n",
+    "\n",
+    "<sup> Ian Anderson , Ulascan Sarica, Andrei Gritsan (Top) Chris Martin, Roberto Covarelli (Bottom) </sup>"
    ]
   },
   {
@@ -1175,7 +1168,7 @@
     "| ---------------- | ----- | ----- |\n",
     "| JHUGen           | single-resonance Spin-0, Spin-1, Spin-2 resonances | Higgs Basis |\n",
     "| MCFM             | single or doubly resonant Spin-0 particles, often used for off-shell $H$ | Higgs Basis |\n",
-    "| Madgraph         | Currently only available for $gg\\rightarrow H$ signal, but will be expanded | Warsaw Basis |\n",
+    "| Madgraph         | Currently only available for $gg\\rightarrow H$ and $q\\bar{q}\\rightarrow 4\\ell$, but will be expanded | Warsaw Basis |\n",
     "\n",
     "For now, we will be using the MCFM Matrix Elements for gluon fusion.\n",
     "\n",
@@ -1233,7 +1226,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "41e92c26",
    "metadata": {},
@@ -1449,7 +1441,7 @@
    "execution_count": 210,
    "id": "53e06acc",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1865,13 +1857,13 @@
    "source": [
     "# MadMELA\n",
     "\n",
-    "MadMELA is what we call the utilization of SMEFTSim reweighting on various processes that we can link to the JHUGenMELA framework. This is detailed in the accompanying introductory slides. **BUT**, we can showcase its compatibility with JHUGen!\n",
+    "MadMELA is what we call the utilization of SMEFTSim reweighting on various processes that we can link to the JHUGenMELA framework. This is detailed in the accompanying introductory slides.\n",
     "\n",
     "We can also check out MadMELA utilizing the same technique! Currently the only available processes are $q\\bar{q} \\rightarrow 4\\ell$ signal, background, and S+B+I, as well as gluon-fusion signal. \n",
     "\n",
     "In the SMEFTSim framework, the absence of any Wilson Coefficients indicates the Standard Model.\n",
     "\n",
-    "We won't be dealing with this during this tutorial, but please know that this is on the way for VBS."
+    "We won't be dealing with this during this tutorial, but please know that this is on the way for more processes."
    ]
   },
   {
@@ -1973,10 +1965,10 @@
     "In every case, `ghz` must be nonzero, as the matrix elements we are dealing with are specifically for ZZ decay. Without those, the Higgs will never decay, so the probability would be 0! However, we can get creative here!\n",
     "\n",
     "\n",
-    "Since we are dealing in the Higgs Amplitude basis, we can treat these terms like Higgs amplitudes. Since every term we have requires a `ghz` in it, we can treat it that way, as the amplitudes are related to the coupling squared. In the equation below, $Z$ represents `ghz1=1`, and $W$ represents `ghw1=1`.\n",
+    "Since we are dealing in the Higgs Amplitude basis, we can treat these terms like Higgs amplitudes. Since every term we have requires a `ghz` in it, we can treat it that way, as the amplitudes are related to the coupling squared in VBF production. In the equation below, $Z$ represents `ghz1=1`, and $W$ represents `ghw1=1`.\n",
     "\n",
     "$$ 2\\left|Z+W\\right|^2 + 2\\left|Z\\right|^2 - 4\\left|Z + \\frac{W}{2}\\right|^2 = W^2,$$ which corresponds to the following setup in MELA:\n",
-    "$$2\\cdot P_\\text{ghz1=1, ghw1=1} + 2\\cdot P_\\text{ghz1=1} - 4\\cdot P_\\text{ghz1=1, ghw1=0.5}$$\n",
+    "$$2\\cdot P_\\text{ghz1=1, ghw1=1} + 2\\cdot P_\\text{ghz1=1} - 4\\cdot P_\\text{ghz1=1, ghw1=0.5} = P_\\text{ghw1=1}$$\n",
     "\n",
     "\n",
     "**Remember that you can always chain amplitudes like this!**\n",
@@ -1988,7 +1980,9 @@
    "cell_type": "code",
    "execution_count": 186,
    "id": "c07ab943",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "AssertionError",
