renamed folder and progress

--- a/matrix_elements/MELA_Tutorial.ipynb
+++ b/matrix_elements/MELA_Tutorial.ipynb
@@ -196,7 +196,7 @@
    "id": "dece2b4e",
    "metadata": {},
    "source": [
-    "Weighted histograms appear everywhere in HEP! Generators often produce weighted histograms that show a distribution as opposed to unweighted events one-by-one, as that is much faster. Really what they are is a representation of how many events you expect in whatever phasespace you expect.\n",
+    "Weighted histograms appear everywhere in HEP! Generators often produce weighted histograms that show a distribution as opposed to unweighted events one-by-one, as that is much faster. Effectively, weights are a representation of how many events (the yield) you expect at the position in phase space you are simulating.\n",
     "\n",
     "Madgraph, and every generator at higher-orders utilize weights to do real physics. In the realm of EFT, we can use these weights to ascribe very specific meaning to show how one hypothesis can shift to another.\n",
     "\n",
@@ -204,7 +204,9 @@
     "\n",
     "In NLO/NNLO/NN(...)LO generators, oftentimes events will have specific weights attached to them to showcase the relative contribution of specific events. This is why negative weights are sometimes an issue, as sometimes interference will drop the yield due to NLO effects. **Keep in mind, due to this (among other issues) - reweighting at NLO/NNLO/etc. is really unwieldy. We will be doing this at LEADING-ORDER**.\n",
     "\n",
-    "In this case, what you're really doing is **replacing** the matrix-element that describes your sample hypothesis, with the one that describes the physics that you want. **As long as your initial state and your final state are the same, you can nominally reweight to anything that you would like**. This is why ***Reweighting can only be done with gen-level quantities***.\n",
+    "In this case, what you're really doing is **replacing** the matrix-element that describes your sample hypothesis, with the one that describes the physics that you want. **As long as your initial state and your final state are the same, you can nominally reweight to anything that you would like**. This is why ***Reweighting can only be done with gen-level quantities***. \n",
+    "\n",
+    "**Since Monte-Carlo generators pull from a kinematically-derived likelihood anyways, swapping out that likelihood for another will net-you the probability distribution you want**.\n",
     "\n",
     "Let's assume that your sample starts with some hypothesis $P_{\\text{SAMPLE}}$, which is the result of some set of couplings. Now, let's say you start at Gen level and want a sample $P_{\\text{TARGET}}$, you would do the following:\n",
     "\n",
