--- a/matrix_elements/Optimal_Observables.ipynb
+++ b/matrix_elements/Optimal_Observables.ipynb
@@ -1702,6 +1702,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c65dbdb5",
+   "metadata": {},
+   "source": [
+    "The formula above stems from the following calculation:\n",
+    "\n",
+    "1. Find the point R at which 50% of the \"signal\" is above the cut, and 50% of the \"background\" is below the cut\n",
+    "\n",
+    "2. This point R is equal to the expression of the discriminant for some singular event in the limit of infinite binning: \n",
+    "$ R = \\displaystyle\\frac{P_0}{P_0 + c \\cdot P_1} = \\displaystyle\\frac{1}{1 + c\\cdot P_0/P_1}$\n",
+    "\n",
+    "3. We want to move this point R to $0.5 = \\displaystyle\\frac{1}{1 + c^\\prime\\cdot P_0/P_1}$ for some different constant $c^\\prime$\n",
+    "\n",
+    "4. Doing some math, we get that $c^\\prime = \\displaystyle\\frac{1}{1/R - 1}$ (left to the reader :D)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 121,
    "id": "91308576",
